--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   mockito: 4.1.0
-  
+
 
 flutter:
 
@@ -27,5 +27,6 @@ flutter:
   assets:
     - assets/pokemons.json
     - assets/moves.json
+    - assets/habitat.json
     
 
